Add iFrame Game

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-Hello World
+<iframe src="https://i.simmer.io/@YellowLime77/~e42c2ebb-9516-dac7-3d26-e680f287536f" style="width:1960px;height:1080px"></iframe>
