--- a/index.html
+++ b/index.html
@@ -1,2 +1,14 @@
-
-HHello
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>RickRolled</title>
+</head>
+<body>
+  ILY
+  <img id="rickroll" src="http://stream1.gifsoup.com/view3/2289359/rick-roll-o.gif"/> 
+  <img id="image" src="http://fc03.deviantart.net/fs70/i/2012/084/c/7/rick_roll_by_idonthaveaname999-d4twtuv.jpg"/>
+        <a id="assign" href="https://github.com/Alabaster456/rickroll">
+        <img src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"/></a>
+</body>
+</html>
