--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
 Hello! Website not created yet :)
+
+Update: My previous website at https://matthewyang.tech/ is down -- my free domain from .tech expired :(
+Alternative: Check the README for each project -- I'll have an alternative link there to access the website
