--- a/index.html
+++ b/index.html
@@ -2,4 +2,15 @@ Hello! Website not created yet :)
 <br>
 Update: My previous website at https://matthewyang.tech/ is down -- my free domain from .tech expired :(
 <br>
-Alternative: Check the README for each project -- I'll have an alternative link there to access the website
+Here are alternative links for my projects (also included in the READMEs on my Github if they're public):
+<ul>
+  <li>
+    <a href="https://personal-website-g5br.onrender.com/">Personal website</a>
+  </li>
+  <li>
+    <a href="https://vocaloidle.onrender.com/">Vocaloidle: A Vocaloid song guessing game</a>
+  </li>
+  <li>
+    <a href="https://timetablediff.onrender.com/">TimetableDiff: A tool for students to compare timetables</a>
+  </li>
+</ul>
