--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@ Hello! Website not created yet :)
 <br>
 Update: My previous website at https://matthewyang.tech/ is down -- my free domain from .tech expired :(
 <br>
-Here are alternative links for my projects (also included in the READMEs on my Github if they're public):
+In the meantime: here are alternative links for my projects...
 <ul>
   <li>
     <a href="https://personal-website-g5br.onrender.com/">Personal website</a>
